Copiando mismo estilos y html para los programas básicos

--- a/mediaquery_store/media_320px.css
+++ b/mediaquery_store/media_320px.css
@@ -809,7 +809,7 @@ h2:hover {
     display: inline-block;
     position: relative;
     /* height: 300px; */
-    margin: 10px 0;
+    /* margin: 10px 0; */
 }
 
 .contenido .mi_trabajo .formateo .programas .titulo h3 {
@@ -819,6 +819,129 @@ h2:hover {
 .contenido .mi_trabajo .formateo .programas .programas-varios {
     text-align: center;
 }
+
+
+/* ------------------------------------------- */
+
+
+/* programas basicos */
+
+.contenido .mi_trabajo .formateo .programas .slider {
+    width: 100%;
+    width: 300px;
+    height: 250px;
+    overflow: hidden;
+}
+
+.contenido .mi_trabajo .formateo .programas .slider .slides {
+    width: inherit;
+    height: inherit;
+    display: flex;
+}
+
+.contenido .mi_trabajo .formateo .programas .slider .slides input {
+    display: none;
+}
+
+.contenido .mi_trabajo .formateo .programas .slider .slides .slide {
+    width: 100%;
+    transition: 2s;
+}
+
+.contenido .mi_trabajo .formateo .programas .slider .slides .slide img {
+    width: max-content;
+}
+
+.contenido .mi_trabajo .formateo .programas .slider .slides .navigation-manual {
+    width: 320px;
+    position: absolute;
+    margin-top: 280px;
+    display: flex;
+    justify-content: center;
+}
+
+.contenido .mi_trabajo .formateo .programas .slider .slides .navigation-manual .manual-btn {
+    border: 2px solid #40d3dc;
+    padding: 10px;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: 1s;
+    animation-name: deslizar;
+    animation-duration: 1.5s;
+}
+
+.contenido .mi_trabajo .formateo .programas .slider .slides .navigation-manual .manual-btn:not(:last-child) {
+    margin-right: 40px;
+}
+
+.contenido .mi_trabajo .formateo .programas .slider .slides .navigation-manual .manual-btn:hover {
+    background: #40d3dc;
+}
+
+.contenido .mi_trabajo .formateo .programas .slider .slides #radio1:checked~.first {
+    margin-left: 0;
+}
+
+.contenido .mi_trabajo .formateo .programas .slider .slides #radio2:checked~.first {
+    margin-left: -100%;
+}
+
+.contenido .mi_trabajo .formateo .programas .slider .slides #radio3:checked~.first {
+    margin-left: -200%;
+}
+
+.contenido .mi_trabajo .formateo .programas .slider .slides #radio4:checked~.first {
+    margin-left: -300%;
+}
+
+.contenido .mi_trabajo .formateo .programas .slider .slides .navigation-auto {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    margin-top: 280px;
+    padding: 0 52px;
+    animation-name: deslizar;
+    animation-duration: 1.5s;
+}
+
+@keyframes deslizar {
+    0% {
+        transform: translateX(-500px);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
+
+.contenido .mi_trabajo .formateo .programas .slider .slides .navigation-auto div {
+    border: 2px solid #40d3dc;
+    padding: 10px;
+    border-radius: 50%;
+    transition: 1s;
+}
+
+.contenido .mi_trabajo .formateo .programas .slider .slides .navigation-auto div:not(:last-child) {
+    margin-right: 40px;
+}
+
+.contenido .mi_trabajo .formateo .programas .slider .slides #ratio1:checked~.navigation-auto .aut-btn1 {
+    background: #40d3dc;
+}
+
+.contenido .mi_trabajo .formateo .programas .slider .slides #ratio2:checked~.navigation-auto .aut-btn2 {
+    background: #40d3dc;
+}
+
+.contenido .mi_trabajo .formateo .programas .slider .slides #ratio3:checked~.navigation-auto .aut-btn3 {
+    background: #40d3dc;
+}
+
+.contenido .mi_trabajo .formateo .programas .slider .slides #ratio4:checked~.navigation-auto .aut-btn4 {
+    background: #40d3dc;
+}
+
+
+/* ----------------------------------------------- */
 
 .contenido .mi_trabajo .formateo .programas .programas-contenedor .c1 {
     height: 200px;
