--- a/mediaquery_store/media_320px.css
+++ b/mediaquery_store/media_320px.css
@@ -66,9 +66,10 @@ h2 {
     color: #419CCA;
     border: 1px solid #419CCA;
     width: 200px;
-    margin-top: 40px;
+    margin: 0 auto;
+    /* margin-top: 40px;
     margin-left: auto;
-    margin-right: auto;
+    margin-right: auto; */
     padding: 15px;
     border-radius: 10px;
     text-align: center;
@@ -522,6 +523,7 @@ h2:hover {
     height: 365px;
     padding: 10px;
     margin: 0 10px;
+    margin-bottom: 50px;
     display: grid;
     grid-template-columns: repeat(10, 1fr);
     grid-template-rows: 1fr;
@@ -710,6 +712,8 @@ h2:hover {
 }
 
 .contenido .mi_trabajo .formateo .sistemas_operativos .titulo {
+    color: #3a2727;
+    text-decoration: underline;
     margin-top: 20px;
     align-self: center;
     justify-self: center;
@@ -739,8 +743,8 @@ h2:hover {
     align-items: center;
     text-align: center;
     justify-items: center;
-    width: 200px;
-    height: 180px;
+    width: 130px;
+    height: 140px;
     margin: 0 10px;
     border: 1px solid gray;
     box-shadow: -8px 10px 10px #AEB2B2;
@@ -748,8 +752,8 @@ h2:hover {
 }
 
 .contenido .mi_trabajo .formateo .sistemas_operativos .linux .linux-distribuciones .sistemas h4 {
-    color: #000;
-    font-size: 1.2rem;
+    color: #944242;
+    font-size: 1rem;
 }
 
 .contenido .mi_trabajo .formateo .sistemas_operativos .linux .linux-distribuciones .sistemas img {
@@ -774,17 +778,13 @@ h2:hover {
 }
 
 .contenido .mi_trabajo .formateo .sistemas_operativos .windows .windows-distribuciones .sistemas {
-    /* display: grid;
-    grid-template-rows: 50px 1fr; */
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    align-items: center;
-    text-align: center;
     justify-items: center;
-    width: 200px;
-    height: 180px;
+    width: 130px;
+    height: 140px;
     margin: 0 10px;
     border: 1px solid gray;
     box-shadow: -10px 5px 15px 0px #AEB2B2;
@@ -792,8 +792,8 @@ h2:hover {
 }
 
 .contenido .mi_trabajo .formateo .sistemas_operativos .windows .windows-distribuciones .sistemas h4 {
-    color: #000;
-    font-size: 1.2rem;
+    color: #944242;
+    font-size: 1rem;
     margin: 0;
     padding-bottom: 20px;
 }
@@ -972,7 +972,7 @@ footer .fuentes p {
 }
 
 @media screen and (min-width:1024px) {
-    .contenido .mi_trabajo .formateo .programas img {
-        width: 18%;
+    .contenido .mi_trabajo {
+        margin: 100px 80px;
     }
 }
