--- a/mediaquery_store/media_320px.css
+++ b/mediaquery_store/media_320px.css
@@ -84,13 +84,16 @@ h2:hover {
 .header {
     background-color: rgba(0, 0, 0, .4);
     top: 0;
-    /* right: 0; */
     bottom: 0;
     width: 70vw;
     right: -780px;
     padding-top: 70px;
     position: fixed;
-    display: block;
+    /* display: block; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     z-index: 10;
     transition: .5s;
 }
@@ -101,7 +104,7 @@ h2:hover {
 
 .header #menu-h .desplegar {
     color: #fff;
-    background-color: #419CCA;
+    background-color: transparent;
     border-radius: 5px;
     box-shadow: 2px 2px white;
     border: 1px solid white;
@@ -123,15 +126,17 @@ h2:hover {
 }
 
 .header #menu-h .sub-menu a {
-    position: absolute;
+    /* position: absolute; */
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 30px;
+    /* height: 30px; */
     color: #fff;
     background-color: #088DD1;
     text-decoration: none;
-    /**/
+    padding: 10px;
+    font-size: .9rem;
+    margin: 0 auto;
 }
 
 .header #menu-h:hover .sub-menu {
@@ -145,6 +150,9 @@ h2:hover {
 
 .header #menu-h {
     text-align: center;
+    display: flex;
+    /* align-items: center;
+    justify-content: center; */
 }
 
 .header #menu-h img {
@@ -186,6 +194,8 @@ h2:hover {
 
 .header #menu-h ul li a:hover {
     background-color: #088DD1;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .header #menu-h ul li ul {
