--- a/mediaquery_store/media_320px.css
+++ b/mediaquery_store/media_320px.css
@@ -42,7 +42,7 @@ body {
     padding: 0;
     height: 100vh;
     background-size: cover;
-    background-color: #e0e6e6;
+    background-color: #FFF;
     font-family: 'Oswald', sans-serif;
 }
 
@@ -86,6 +86,7 @@ h2:hover {
     top: 0;
     bottom: 0;
     width: 100vw;
+    right: -700px;
     position: fixed;
     display: flex;
     justify-content: center;
@@ -344,7 +345,8 @@ h2:hover {
 }
 
 .contenido .presentacion .slider .slides .slide img {
-    width: max-content;
+    width: 100vw;
+    height: 50vh;
 }
 
 .contenido .presentacion .slider .slides .navigation-manual {
@@ -590,7 +592,6 @@ h2:hover {
     text-decoration: none;
     border: none;
     border-radius: 10px;
-    /* box-shadow: inset x y; */
     box-shadow: inset 0 -.2em rgba(0, 0, 0, .2);
     color: #fff;
     cursor: pointer;
