--- a/mediaquery_store/media_320px.css
+++ b/mediaquery_store/media_320px.css
@@ -101,12 +101,17 @@ h2:hover {
 }
 
 .header #menu-h .desplegar {
+    font-family: 'Oswald', sans-serif;
+    width: 162px;
+    height: 40px;
     color: #fff;
-    background-color: transparent;
+    /* background-color: transparent; */
+    background: linear-gradient(-180deg, #6FC0F9 10%, #0A96F7 100%);
+    ;
     border-radius: 5px;
     box-shadow: 2px 2px white;
     border: 1px solid white;
-    font-size: 1em;
+    font-size: 1.4rem;
     padding: 5px;
     margin: 0;
 }
@@ -120,7 +125,8 @@ h2:hover {
 .header #menu-h .sub-menu {
     display: none;
     position: relative;
-    padding-bottom: 500px;
+    margin-top: 10px;
+    /* padding-bottom: 500px; */
 }
 
 .header #menu-h .sub-menu a {
@@ -185,9 +191,13 @@ h2:hover {
 }
 
 .header #menu-h ul li a {
-    font-size: 1.1em;
+    width: 150px;
+    font-size: 1.4rem;
     color: #fff;
     text-decoration: none;
+    background: linear-gradient(-180deg, #6FC0F9 10%, #0A96F7 100%);
+    ;
+    margin: 15px 0;
 }
 
 .header #menu-h ul li a:hover {
