--- a/mediaquery_store/media_320px.css
+++ b/mediaquery_store/media_320px.css
@@ -101,16 +101,15 @@ h2:hover {
 }
 
 .header #menu-h .desplegar {
-    width: 140px;
-    height: 40px;
+    /* width: 140px; */
+    height: 36px;
     color: #fff;
-    background: linear-gradient(-180deg, #6FC0F9 10%, #0A96F7 100%);
-    ;
+    background: transparent;
     border-radius: 5px;
-    box-shadow: 2px 2px white;
     border: 1px solid white;
-    font-size: 1.4rem;
-    margin-top: 15px;
+    font-size: 1.1rem;
+    margin-top: 12px;
+    font-family: 'Oswald', sans-serif;
 }
 
 .header #menu-h .desplegar:hover {
@@ -185,9 +184,6 @@ h2:hover {
     font-size: 1.4rem;
     color: #fff;
     text-decoration: none;
-    background: linear-gradient(-180deg, #6FC0F9 10%, #0A96F7 100%);
-    ;
-    margin: 15px 0;
 }
 
 .header #menu-h ul li a:hover {
