--- a/mediaquery_store/media_320px.css
+++ b/mediaquery_store/media_320px.css
@@ -98,8 +98,8 @@ h2:hover {
 }
 
 .header #menu-h .desplegar {
-    width: 150px;
-    height: 37px;
+    /* width: 150px; */
+    /* height: 37px; */
     color: #fff;
     background: transparent;
     border-radius: 5px;
@@ -1029,6 +1029,7 @@ footer .fuentes p {
         width: 100px;
         font-size: 1.1rem;
     }
+    .header #menu-h .desplegar {}
     .contenido .logo {
         width: 0;
         margin-left: 80px;
