--- a/css/storeia.css
+++ b/css/storeia.css
@@ -105,7 +105,7 @@ h2:hover {
     border-radius: 5px;
     border: 1px solid white;
     font-size: 1.1rem;
-    margin-top: 12px;
+    /* margin-top: 12px; */
     font-family: 'Oswald', sans-serif;
 }
 
@@ -120,15 +120,16 @@ h2:hover {
 }
 
 .header #menu-h .sub-menu a {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    /* display: flex; */
+    /* align-items: center;
+    justify-content: center; */
     color: #fff;
     background-color: #088DD1;
     text-decoration: none;
-    padding: 10px;
+    /* padding: 10px; */
     font-size: .9rem;
-    margin: 0 auto;
+    /* margin: 0 auto; */
+    flex-direction: column-reverse;
 }
 
 .header #menu-h:hover .sub-menu {
@@ -137,9 +138,9 @@ h2:hover {
     text-decoration: none;
     text-align: center; */
     /* display: block; */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    display: block;
+    /* flex-direction: column;
+    align-items: center; */
 }
 
 .header #menu-h {
@@ -742,6 +743,20 @@ h2:hover {
     overflow-x: auto;
 }
 
+.contenido .mi_trabajo .formateo .sistemas_operativos .linux::-webkit-scrollbar {
+    height: 10px;
+    background: #fff;
+    border-radius: 5px;
+}
+
+
+/* con thumb se accede a la barra */
+
+.contenido .mi_trabajo .formateo .sistemas_operativos .linux::-webkit-scrollbar-thumb {
+    background: linear-gradient(-180deg, #6FC0F9 10%, #0A96F7 100%);
+    border-radius: 5px;
+}
+
 .contenido .mi_trabajo .formateo .sistemas_operativos .linux .titulo {
     justify-items: center;
     align-self: center;
@@ -765,6 +780,16 @@ h2:hover {
     border-radius: 20px;
 }
 
+
+/* 
+.contenido .mi_trabajo .formateo .sistemas_operativos .linux .linux-distribuciones .sistemas:nth-child(1):hover {
+    background-color: rgba(0, 0, 0, .5);
+}
+
+.contenido .mi_trabajo .formateo .sistemas_operativos .linux .linux-distribuciones .sistemas:nth-child(2):hover {
+    background-color: rgba(0, 0, 0, .5);
+} */
+
 .contenido .mi_trabajo .formateo .sistemas_operativos .linux .linux-distribuciones .sistemas h4 {
     color: #944242;
     font-size: 1rem;
@@ -773,6 +798,10 @@ h2:hover {
 .contenido .mi_trabajo .formateo .sistemas_operativos .linux .linux-distribuciones .sistemas img {
     width: 50%;
     text-align: center;
+}
+
+.contenido .mi_trabajo .formateo .sistemas_operativos .linux .linux-distribuciones .sistemas p {
+    display: none;
 }
 
 .contenido .mi_trabajo .formateo .sistemas_operativos .windows {
@@ -1033,7 +1062,18 @@ footer .fuentes p {
         width: 100px;
         font-size: 1.1rem;
     }
-    .header #menu-h .desplegar {}
+    .header #menu-h ul li a:hover {
+        background-color: #fff;
+        color: #0a96f7;
+    }
+    .header #menu-h .desplegar:hover {
+        background-color: #fff;
+        color: #0a96f7;
+    }
+    .header #menu-h .sub-menu {
+        margin: 0;
+        padding: 0;
+    }
     .contenido .logo {
         width: 0;
         margin-left: 80px;
@@ -1054,5 +1094,11 @@ footer .fuentes p {
     .contenido .mi_trabajo .formateo .sistemas_operativos .linux .linux-distribuciones .sistemas {
         width: 200px;
         height: 200px;
+    }
+    .contenido .mi_trabajo .formateo .sistemas_operativos .linux .linux-distribuciones .sistemas p {}
+    .contenido .mi_trabajo .formateo .sistemas_operativos .linux .linux-distribuciones .sistemas p:hover {
+        color: #fff;
+        display: flex;
+        height: 100%;
     }
 }
