--- a/css/storeia.css
+++ b/css/storeia.css
@@ -84,6 +84,7 @@ h2:hover {
     bottom: 0;
     width: 100vw;
     right: -1025px;
+    padding: 10px;
     position: fixed;
     display: flex;
     justify-content: center;
@@ -483,7 +484,7 @@ h2:hover {
 .contenido .accesorios .celulares .accesorio-celular h3 {
     line-height: 40px;
     height: 40px;
-    font-size: .9em;
+    font-size: .8em;
     margin: 0;
     text-align: center;
 }
@@ -565,7 +566,7 @@ h2:hover {
 }
 
 .contenido .accesorios .pc .accesorio-pc h3 {
-    font-size: .9em;
+    font-size: .8em;
     height: 40px;
     line-height: 40px;
     text-align: center;
